chore: dummy replace blog with job
Signed-off-by: Guillaume Belanger <guillaume.belanger27@gmail.com>

--- a/ui/src/app/globals.scss
+++ b/ui/src/app/globals.scss
@@ -27,24 +27,24 @@
     }
 }
 
-/* Styles for blog post content */
-.blog-post-content h1 {
+/* Styles for job post content */
+.job-post-content h1 {
     font-size: 2rem;
     margin-top: 1.5rem;
 }
 
-.blog-post-content h2 {
+.job-post-content h2 {
     font-size: 1.75rem;
     margin-top: 1.25rem;
 }
 
-.blog-post-content h3 {
+.job-post-content h3 {
     font-size: 1.5rem;
     margin-top: 1rem;
 }
 
 /* Adjust other elements like paragraphs, lists, etc. if needed */
-.blog-post-content p {
+.job-post-content p {
     font-size: 1rem;
     line-height: 1.5;
 }
